@@ -32,6 +32,8 @@
 
 * Renamed SceneEditor to SceneHierarchy to be more explicit that it visualises the scene graph and doesn't really provide much in the way of editing.
 
+* Renamed TimeEditor to a more user friendly Timeline.
+
 0.53.0
 ======
 
